Fix sticky footer overlapping

--- a/app/assets/stylesheets/partials/users/_edit.sass
+++ b/app/assets/stylesheets/partials/users/_edit.sass
@@ -2,9 +2,8 @@
 @import 'common/mixins'
 
 body.edit-user
-  +sticky-footer
   main
-    margin-bottom: 30px   
+    margin-bottom: 30px
   .edit_conekta_card
     margin-top: 40px
   form
@@ -30,7 +29,7 @@ body.edit-user
       width: 250px
 
     .contact-info
-      width: 55% 
+      width: 55%
       display: inline-block
 
     .passwords
@@ -39,7 +38,7 @@ body.edit-user
       padding-left: 0
       display: inline-block
 
-      
+
   .bottom-buttons-container
     max-width: 850px
     width: 100%
